--- a/Project-1/css/header.css
+++ b/Project-1/css/header.css
@@ -16,22 +16,21 @@ header .details {
 header .details h1{
     font-size: 4vw;
     font-weight: 500;
-    line-height: 30px;
-    margin-bottom:3px;
+    margin-bottom:8px;
 }
 
 header .details p{
-    font-size: 10px;
+    font-size: 18px;
 }
 
 .green-button{
     background-color: var(--primary-color);
     border: 0;
-    padding: 5px 10px;
+    padding: 2% 4%;
     border-radius: 4px;
     color: white;
-    font-size: 10px;
-    margin-top: 15px;
+    font-size: 18px;
+    margin-top: 40px;
 }
 
 header img{
