--- a/Project-1/css/header.css
+++ b/Project-1/css/header.css
@@ -39,3 +39,10 @@ header img{
     margin-left: 20px;
 }
 
+@media (max-width: 425px) {
+    header {
+        flex-direction: column-reverse;
+        padding:5% 0;
+        height: fit-content;
+    }
+}
